# mcp-obsidian-plus

./: README.md  pyproject.toml
src/mcp_obsidian_plus/: file_ops.py  knowledge.py  obsidian.py  server.py  tools.py  tools_plus.py
